syntax = "proto3";
package seiprotocol.seichain.execution;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "execution/params.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/execution/types";

// Query defines the gRPC query service
service Query {
  // Params queries the parameters of the execution module
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/execution/params";
  }

  // GetBatchHash queries the transaction hash for a batch_id
  rpc GetBatchHash(QueryGetBatchHashRequest) returns (QueryGetBatchHashResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/execution/batch_hash/{batch_id}";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method
message QueryParamsResponse {
  // params defines the parameters of the module
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryGetBatchHashRequest is the request type for querying a batch hash
message QueryGetBatchHashRequest {
  // batch_id is the unique identifier of the batch
  string batch_id = 1 [(gogoproto.moretags) = "yaml:\"batch_id\""];
}

// QueryGetBatchHashResponse is the response type for querying a batch hash
message QueryGetBatchHashResponse {
  // batch_id is the batch identifier
  string batch_id = 1 [(gogoproto.moretags) = "yaml:\"batch_id\""];

  // tx_hash is the SHA256 hash of the transaction (hex-encoded)
  string tx_hash = 2 [(gogoproto.moretags) = "yaml:\"tx_hash\""];
}

